--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -92,6 +92,7 @@ h6 {
     color: color(blue);
     margin-bottom: 0.4em;
     margin-top: 0.4em;
+    text-align: left;
 }
 
 h1 {
